Rename variables
Signed-off-by: barracuda <dimitrijchannel@gmail.com>